<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrub_top_bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/kinescope_mobile_background_gradient_height"
    android:clickable="false"
    android:clipChildren="false"
    android:focusable="false"
    android:visibility="gone"
    tools:visibility="visible">

    <View
        android:id="@+id/scrub_hint_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_scrub_hint_header"
        android:importantForAccessibility="no" />

    <LinearLayout
        android:id="@+id/scrub_hint_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/kinescope_scrub_hint_content_margin_top"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <io.kinescope.sdk.view.SeekDirectionIconView
            android:id="@+id/btn_move_back"
            android:layout_width="@dimen/kinescope_scrub_seek_icon_width"
            android:layout_height="@dimen/kinescope_scrub_seek_icon_height"
            android:contentDescription="@string/player_seek_back"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/scrub_hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/player_scrub_double_tap_hint"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <io.kinescope.sdk.view.SeekDirectionIconView
            android:id="@+id/btn_move_forward"
            android:layout_width="@dimen/kinescope_scrub_seek_icon_width"
            android:layout_height="@dimen/kinescope_scrub_seek_icon_height"
            android:contentDescription="@string/player_seek_forward"
            android:importantForAccessibility="no" />

    </LinearLayout>

</FrameLayout>
