<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/kinescope_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/kinescope_control_overlay_scrim"
    android:clickable="false"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:targetApi="28">

    <LinearLayout
        android:id="@+id/kinescope_description_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/kinescope_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="Title text" />

        <TextView
            android:id="@+id/kinescope_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="Author text" />
    </LinearLayout>

    <io.kinescope.sdk.view.KinescopePlayPauseMorphView
        android:id="@+id/kinescope_play_pause"
        android:layout_width="@dimen/kinescope_play_pause_size"
        android:layout_height="@dimen/kinescope_play_pause_size"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/kinescope_control_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:baselineAligned="false"
        android:clipChildren="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/kinescope_time_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:minHeight="@dimen/kinescope_mobile_control_time_height"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/live_data_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:id="@+id/live_badge_circle_view"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/ic_live_synced" />

                <TextView
                    android:id="@+id/live_badge_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/live"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/live_time_offset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/kinescope_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:minEms="2"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="12:49" />

            <TextView
                android:id="@+id/time_separator_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:includeFontPadding="false"
                android:text="@string/player_time_divider"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="gone" />

            <TextView
                android:id="@+id/kinescope_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="gone"
                tools:text="0:00" />

        </LinearLayout>

        <io.kinescope.sdk.view.KinescopeTimeBar
            android:id="@+id/kinescope_progress"
            android:layout_width="0dp"
            android:layout_height="@dimen/kinescope_progress_control_height"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            app:bar_height="@dimen/kinescope_progress_bar_height"
            app:played_color="@color/kinescope_primary_color"
            app:scrubber_color="@color/kinescope_primary_color"
            app:scrubber_disabled_size="0dp"
            app:scrubber_dragged_size="0dp"
            app:scrubber_enabled_size="0dp"
            app:touch_target_height="@dimen/kinescope_progress_touch_target_height" />

        <Space
            android:id="@+id/kinescope_control_bar_end_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/buttons_container_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clipChildren="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/kinescope_options_expanded_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/custom_btn"
                    style="@style/KinescopeMediaButton"
                    android:importantForAccessibility="no"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/kinescope_picture_in_picture"
                    style="@style/KinescopeMediaButton"
                    android:contentDescription="@string/player_picture_in_picture"
                    android:src="@drawable/ic_mini_player"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/kinescope_settings"
                    style="@style/KinescopeMediaButton"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_settings" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/kinescope_fullscreen"
                style="@style/KinescopeMediaButton"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_fullscreen" />

            <ImageButton
                android:id="@+id/kinescope_options_dots"
                style="@style/KinescopeMediaButton"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_dots_horizontal"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
